fix alignement

--- a/css/start.css
+++ b/css/start.css
@@ -83,13 +83,18 @@
 }
 
 /* Shared buttons container (CTA text + button) */
-.result-buttons {
+.nav-buttons {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  gap: 1em;
   justify-content: center;
   padding: 20px;
   text-align: center;
+}
+
+.nav-buttons.two {
+  flex-direction: column;
 }
 
 /* Leaderboard table (Top 5 scores) */
